--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
-language: java
-jdk:
-  - openjdk8
-script: mvn test -B
+matrix:
+  include:
+    - language: java
+      jdk: openjdk8
+      script: mvn test -B
+
+    - language: csharp
+      solution: src/main/cs/Playground.sln
