--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ matrix:
   include:
     - language: java
       jdk: openjdk8
-      script: mvn test -B
+      script: mvn package -B
 
     - language: csharp
       solution: src/main/cs/Playground.sln
