--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,11 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160810</version>
+        </dependency>
+        <dependency>
             <groupId>com.luckycatlabs</groupId>
             <artifactId>SunriseSunsetCalculator</artifactId>
             <version>1.1</version>
